[24.May 2009]
- gfx/panel/seperator2.png: 120px wide now (as needed)

[22.May 2009]
- bottompanel.rb, bpvikingview.rb: finished applying Ingo's improvements
  of BottomPanel: added separators (lines) between vikings and randomly
  generated backgrounds in inventories

[17.May 2009]
- gfx/panel/*: added Ingo's backgrounds and separators
- bottompanel.rb: support for background image; improved documentation
  of methods 'repaint_image' and 'paint'
- bpvikingview.rb: fixed placement of energy points; refactoring
- fvdef.rb: updated highest tested versions of libraries
- entities/helpbutton.rb, gfx/help.tga, gfx/help_button.png:
  image of HelpButton replaced by Ingo's new version

[16.May 2009]
- gfx/panel/*, gfx/apple.png: added more elements of Ingo's improvements
  on BottomPanel
- gfx/panel/energypunkt.png renamed to "energypoint_red.png"
- bpvikingview.rb: added Ingo's energy points (exactly: background and blue 
  extra point)

[10.May 2009]
- bpvikingview.rb, trash.rb, gfx/panel/*: adding Ingo's improvements 
  on BottomPanel;
  created new directory gfx/panel, some panel-connected graphics moved there

[16.February 2009]
- viking.rb: viking pulling right isn't catched inside the brick;
  removed last forgotten reference to Ability (made error on climbing);
  viking can't pull when he's rising;
  removed error "short 'pull blink'" when pulling viking stops and then goes
  back;
  it isn't possible to start pulling directly from 'bull-head' state
- Vikings' models: added states for pulling;
  Eric's special testing image commented out (it isn't in CVS)
- entities/bigbrick.rb: brick can't be pulled into a solid tile (or object)
- inventory.rb: added method each_with_index; implementation of some methods
  replaced with delegation
- viking.rb, config files: optional auto-use of healing items

[13.February 2009]
- gfx/bigbrick.png: update ("pure pixelart" version, again by nogath)

[12.February 2009]